/**
 * 
 */
package cn.nju.game.fight;

/**
 * 造成魔法伤害
 * @author frank
 *
 */
public interface MagicalDamage {

	/**
	 * 造成魔法伤害
	 * @return 伤害值
	 */
	public int computeMagicDamage();
}
