/**
 * 
 */
package cn.nju.game.fight;

/**
 * 物理伤害接口
 * @author frank
 *
 */
public interface PhysicalDamage {
	/**
	 * 计算物理伤害
	 */
	public int computePhysicalDamage();
}
